src/public/stylesheets/master.css
/*
* Global
*/





/*
 * Navbar
 */

.navbar {
  justify-content: space-between;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  border-radius: 4px;
}

.navbar-username span {
  font-size: 0.75em;
}

.navbar-links {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.btn-logout {
  color: rgb(255, 92, 92);
}

.btn-logout:hover, .btn-logout:active {
  color: rgb(250, 145, 145);
}

.navbar-links form {
  align-self: center;
}

.btn-delete-user {
  color: rgb(255, 0, 0);
  font-size: 0.75em;
}

.btn-delete-user:hover, .btn-delete-user:active {
  color: rgb(255, 92, 92);
}





/*
 * Sign up and Login in forms
 */
 
.authentication-form {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
}

.form-container {
  width: 100%;
  padding: 15px;
  max-width: 350px;
}





/*
 * Metrics
 */
 
.metrics-container {
  display: flex;
  flex-direction: row;
}

.metrics-new {
  margin-right: 1em;
  flex-shrink: 0;
}

.metrics-all-container {
  overflow: auto;
  white-space: nowrap;
  align-self: center;
}

.metrics-all-container .card {
  width: 150px;
  margin-right: 1em;
  display: inline-block;
}





/*
 * Other
 */

.documents-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-content: space-between;
}

.link-danger {
  color: #c82333;
}

